Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19792

CMake: Wrong path to target executable, can't be fixed by user

    XMLWordPrintable

Details

    Description

      Also tested with 4.6.0-rc1 (4.5.83)

      When opening existing CMake project QtCreator automatically creates Run configurations for all targets. They are correct. However, when adding more targets (add_executable) to CMakeLists, it is not possible to create Run Configurations, because QtCreator automatically creates invalid path to executable, and does not allow user to change it.

      For example on screenshot.
      Clion automatically sets Executable to "test_virtual_ports2".
      But should set to "/path/to/cmake-build-dir/test_virtual_ports2"

      When trying to run I got:
      ""Starting test_virtual_ports2...
      Executable test_virtual_ports2 does not exist.""

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            ripopov Roman Popov
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes