CMake: Use better value to initialize executable of RunConfiguration

Task-number: QTCREATORBUG-19792
Change-Id: Iacf72c71c65ffcfb3a46ca985424806a1d75f1cf
Reviewed-by: hjk <hjk@qt.io>